--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_footer.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_footer.scss
@@ -1,13 +1,11 @@
 .footer {
-  height: 300px;
   color: white;
+  padding: 75px;
   background-image: url("https://www.debouwcombinatienc.nl/wp-content/uploads/2019/02/prism.png");
   border-top: 7px solid $primary-color;
   &__menu {
-    display: flex;
-    flex: 1;
-    margin: 50px;
     flex-direction: column;
+    display: flex;
   }
   & h2 {
     font-family: $heading-font;
