--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -10,6 +10,8 @@
 
  h1,h2,h3,h4 { color:#4b84af; }
 
+ .fas { color:#4b84af; font-size:1.75rem; padding:15px; }
+
  .btn { padding:20px; color:white; margin:0 15px; height:40px; display:flex; align-items:center; justify-content:center; border-radius:5px; }
 
  .btn a { color:white; }
@@ -42,9 +44,13 @@
 
  .header__menu a:hover { color:#4b84af; }
 
- .header__menuicon { display:none; margin-right:40px; flex:1; flex-direction:column; justify-content:center; align-items:flex-end; cursor:pointer; }
+ .header__mobile { display:flex; flex:1; justify-content:flex-end; }
 
- .header__menuicon span { height:4px; width:35px; margin-bottom:5px; border-radius:5px; background-color:#4b84af; }
+ .header__icons { display:flex; justify-content:center; align-items:center; }
+
+ .header__hamburger { display:flex; flex-direction:column; align-items:center; justify-content:center; background-color:#4b84af; height:100%; width:70px; cursor:pointer; }
+
+ .header__hamburger span { height:4px; width:35px; margin-bottom:5px; border-radius:5px; background-color:white; }
 
  .subheader { height:200px; background-image:url("https://www.build-review.com/wp-content/uploads/2019/05/Construction-business.png"); margin-bottom:75px; }
 
