--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_header.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_header.scss
@@ -70,13 +70,27 @@
       }
     }
   }
-  &__menuicon {
-    display: none;
-    margin-right: 40px;
+
+  &__mobile {
+    display: flex;
     flex: 1;
-    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  &__icons {
+    display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+  }
+
+  &__hamburger {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: $primary-color;
+    height: 100%;
+    width: 70px;
     cursor: pointer;
 
     span {
@@ -84,7 +98,7 @@
       width: 35px;
       margin-bottom: 5px;
       border-radius: 5px;
-      background-color: $primary-color;
+      background-color: white;
     }
   }
 }
