--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_header.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_header.scss
@@ -99,6 +99,21 @@
       margin-bottom: 5px;
       border-radius: 5px;
       background-color: white;
+      transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
+    }
+
+    &.open {
+      span {
+        &:nth-child(1) {
+          transform: translateY(8px) rotate(45deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:nth-child(3) {
+          transform: translateY(-10px) rotate(-45deg);
+        }
+      }
     }
   }
 }
