--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -20,7 +20,25 @@
 
  .wpcf7-form-control { height:50px; border:1px solid black; }
 
- .header { position:fixed; top:0; width:100%; z-index:2; background-color:white; box-shadow:0px 0px 10px #ccc; }
+ @keyframes fadeIn { 0% { opacity:0; }
+
+ 100% { opacity:1; }
+
+ }
+
+ @keyframes slideInLeft { 0% { opacity:0; transform:translateX(-100%); }
+
+ 100% { opacity:1; transform:translateX(0%); }
+
+ }
+
+ @keyframes slideDown { 0% { transform:translateY(-100%); }
+
+ 100% { transform:translateY(0%); }
+
+ }
+
+ .header { position:fixed; top:0; width:100%; z-index:3; background-color:white; box-shadow:0px 0px 10px #ccc; }
 
  .header__topbar { background-color:#4b84af; padding:0% 8%; height:30px; color:white; display:flex; justify-content:flex-end; align-items:center; }
 
@@ -34,7 +52,7 @@
 
  .header__logo img { height:75px; width:150px; }
 
- .header__menu { display:flex; flex:1.5; height:75px; margin-right:100px; justify-content:flex-end; align-items:center; }
+ .header__menu { display:flex; position:relative; flex:1.5; height:75px; margin-right:100px; justify-content:flex-end; align-items:center; }
 
  .header__menu ul { display:flex; justify-content:center; align-items:center; }
 
@@ -60,13 +78,17 @@
 
  .subheader { height:200px; background-image:url("https://www.build-review.com/wp-content/uploads/2019/05/Construction-business.png"); margin-bottom:75px; }
 
- @media (max-width:768px) { .header__menu { position:absolute; z-index:-1; top:0; display:flex; margin:0; justify-content:center; height:100vh; width:100vw; background-color:#eee; transform:translateY(-100%); transition:500ms; }
+ .mobilemenu { display:none; }
 
- .header__menu.open { transform:translateY(0%); }
+ @media (max-width:768px) { .mobilemenu { position:fixed; z-index:2; top:0; display:none; padding-top:90px; margin:0; height:100vh; justify-content:center; width:100vw; background-color:#eee; animation:slideDown 400ms forwards; }
 
- .header__menu ul { display:flex; flex-direction:column; }
+ .mobilemenu.open { display:flex; }
 
- .header__menu ul li { margin:10px; }
+ .mobilemenu__list ul { display:flex; flex-direction:column; list-style:none; }
+
+ .mobilemenu__list ul li { margin:15px; }
+
+ .header__menu { display:none; }
 
  .header__menuicon { display:flex; }
 
