--- a/wp-content/themes/bouwbedrijf_theme_one/scss/style.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./buttons";
 @import "./inputs";
 @import "./animations";
+@import "./typography";
 
 @import "./header";
 @import "./footer";
