--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -38,6 +38,10 @@
 
  }
 
+ .link--primary { transition:400ms; color:#4b84af; }
+
+ .link--primary:hover { color:#6d9cc0; }
+
  .header { position:fixed; top:0; width:100%; z-index:3; background-color:white; box-shadow:0px 0px 10px #ccc; }
 
  .header__topbar { background-color:#4b84af; padding:0% 8%; height:30px; color:white; display:flex; justify-content:flex-end; align-items:center; }
@@ -105,6 +109,8 @@
  .footer { color:white; padding:75px; background-image:url("https://www.debouwcombinatienc.nl/wp-content/uploads/2019/02/prism.png"); border-top:7px solid #4b84af; }
 
  .footer__menu { flex-direction:column; display:flex; }
+
+ .footer__bottom { height:25px; display:flex; align-items:center; justify-content:flex-end; background-color:#202020; color:#ccc; font-size:0.6rem; }
 
  .footer h2 { font-family:"Montserrat", "Arial", "sans-serif"; font-size:18px; font-weight:bold; }
 
