--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_header.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_header.scss
@@ -87,6 +87,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    .fas {
+      font-size: 1.75rem;
+      padding: 15px;
+      color: $primary-color;
+    }
   }
 
   &__hamburger {
