--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -1,347 +1,124 @@
-@import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
-html,
-body,
-li,
-ul {
-  margin: 0;
-  padding: 0;
-  font-family: "Rubik", "Arial", "sans-serif";
-}
+ @import url("https://fonts.googleapis.com/css?family=Rubik&display=swap"); @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"); html,body,li,ul { margin:0; padding:0; font-family:"Rubik", "Arial", "sans-serif"; }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
+ a { text-decoration:none; color:inherit; }
 
-main {
-  padding: 105px 0;
-  background-color: #f7f7f7;
-}
+ main { padding:105px 0; background-color:#f7f7f7; }
 
-@media (max-width: 768px) {
-  main {
-    padding: 75px 0;
-  }
-}
+ @media (max-width:768px) { main { padding:75px 0; }
 
-h1,
-h2,
-h3,
-h4 {
-  color: #4b84af;
-}
+ }
 
-.btn {
-  padding: 20px;
-  color: white;
-  margin: 0 15px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-}
+ h1,h2,h3,h4 { color:#4b84af; }
 
-.btn a {
-  color: white;
-}
+ .btn { padding:20px; color:white; margin:0 15px; height:40px; display:flex; align-items:center; justify-content:center; border-radius:5px; }
 
-.elementor-button {
-  background-color: red;
-}
+ .btn a { color:white; }
 
-.wpcf7-form-control {
-  height: 50px;
-  border: 1px solid black;
-}
+ .elementor-button { background-color:red; }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+ .wpcf7-form-control { height:50px; border:1px solid black; }
 
-  100% {
-    opacity: 1;
-  }
-}
+ @keyframes fadeIn { 0% { opacity:0; }
 
-@keyframes slideInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100%);
-  }
+ 100% { opacity:1; }
 
-  100% {
-    opacity: 1;
-    transform: translateX(0%);
-  }
-}
+ }
 
-@keyframes slideDown {
-  0% {
-    transform: translateY(-100%);
-  }
+ @keyframes slideInLeft { 0% { opacity:0; transform:translateX(-100%); }
 
-  100% {
-    transform: translateY(0%);
-  }
-}
+ 100% { opacity:1; transform:translateX(0%); }
 
-.link--primary {
-  transition: 400ms;
-  color: #4b84af;
-}
+ }
 
-.link--primary:hover {
-  color: #6d9cc0;
-}
+ @keyframes slideDown { 0% { transform:translateY(-100%); }
 
-.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 3;
-  background-color: white;
-  box-shadow: 0px 0px 10px #ccc;
-}
+ 100% { transform:translateY(0%); }
 
-.header__topbar {
-  background-color: #4b84af;
-  padding: 0% 8%;
-  height: 30px;
-  color: white;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
+ }
 
-.header__topbar ul {
-  justify-content: center;
-  display: flex;
-  align-items: center;
-}
+ .link--primary { transition:400ms; color:#4b84af; }
 
-.header__topbar li {
-  flex-direction: column;
-  justify-content: center;
-  display: flex;
-  margin-left: 35px;
-  align-items: center;
-}
+ .link--primary:hover { color:#6d9cc0; }
 
-.header__main {
-  height: 100%;
-  position: relative;
-  display: flex;
-}
+ .header { position:fixed; top:0; width:100%; z-index:3; background-color:white; box-shadow:0px 0px 10px #ccc; }
 
-.header__logo {
-  display: flex;
-  flex: 1;
-  height: 75px;
-  align-items: center;
-  margin-left: 5%;
-}
+ .header__topbar { background-color:#4b84af; padding:0% 8%; height:30px; color:white; display:flex; justify-content:flex-end; align-items:center; }
 
-.header__logo img {
-  height: 75px;
-  width: 150px;
-}
+ .header__topbar ul { justify-content:center; display:flex; align-items:center; }
 
-@media (max-width: 768px) {
-  .header__logo img {
-    height: 50px;
-    width: 100px;
-  }
-}
+ .header__topbar li { flex-direction:column; justify-content:center; display:flex; margin-left:35px; align-items:center; }
 
-.header__menu {
-  display: flex;
-  position: relative;
-  flex: 1.5;
-  height: 75px;
-  margin-right: 100px;
-  justify-content: flex-end;
-  align-items: center;
-}
+ .header__main { height:100%; position:relative; display:flex; }
 
-.header__menu ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+ .header__logo { display:flex; flex:1; height:75px; align-items:center; margin-left:5%; }
 
-.header__menu li {
-  flex-direction: column;
-  display: flex;
-  padding: 0 1rem;
-  font-size: 18px;
-}
+ .header__logo img { height:75px; width:150px; }
 
-.header__menu a {
-  color: black;
-  transition: color 300ms ease;
-}
+ @media (max-width:768px) { .header__logo img { height:50px; width:100px; }
 
-.header__menu a:hover {
-  color: #4b84af;
-}
+ }
 
-.header__mobile {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-}
+ .header__menu { display:flex; position:relative; flex:1.5; height:75px; margin-right:100px; justify-content:flex-end; align-items:center; }
 
-.header__icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+ .header__menu ul { display:flex; justify-content:center; align-items:center; }
 
-.header__icons .fas {
-  font-size: 1.75rem;
-  padding: 15px;
-  color: #4b84af;
-}
+ .header__menu li { flex-direction:column; display:flex; padding:0 1rem; font-size:18px; }
 
-.header__hamburger {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #4b84af;
-  height: 100%;
-  width: 70px;
-  cursor: pointer;
-}
+ .header__menu a { color:black; transition:color 300ms ease; }
 
-.header__hamburger span {
-  height: 4px;
-  width: 35px;
-  margin-bottom: 5px;
-  border-radius: 5px;
-  background-color: white;
-  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
-}
+ .header__menu a:hover { color:#4b84af; }
 
-.header__hamburger.open span:nth-child(1) {
-  transform: translateY(8px) rotate(45deg);
-}
+ .header__mobile { display:flex; flex:1; justify-content:flex-end; }
 
-.header__hamburger.open span:nth-child(2) {
-  opacity: 0;
-}
+ .header__icons { display:flex; justify-content:center; align-items:center; }
 
-.header__hamburger.open span:nth-child(3) {
-  transform: translateY(-10px) rotate(-45deg);
-}
+ .header__icons .fas { font-size:1.75rem; padding:15px; color:#4b84af; }
 
-.subheader {
-  height: 200px;
-  background-image: url("https://www.build-review.com/wp-content/uploads/2019/05/Construction-business.png");
-  margin-bottom: 75px;
-}
+ .header__hamburger { display:flex; flex-direction:column; align-items:center; justify-content:center; background-color:#4b84af; height:100%; width:70px; cursor:pointer; }
 
-.mobilemenu {
-  display: none;
-}
+ .header__hamburger span { height:4px; width:35px; margin-bottom:5px; border-radius:5px; background-color:white; transition:all 300ms cubic-bezier(0.645, 0.045, 0.355, 1); }
 
-@media (max-width: 992px) {
-  .mobilemenu {
-    position: fixed;
-    z-index: 2;
-    display: flex;
-    top: 0;
-    padding-top: 90px;
-    margin: 0;
-    height: 100vh;
-    justify-content: center;
-    width: 100vw;
-    background-color: #eee;
-    transform: translateY(-100%);
-    transition: 400ms;
-  }
+ .header__hamburger.open span:nth-child(1) { transform:translateY(8px) rotate(45deg); }
 
-  .mobilemenu.open {
-    transform: translateY(0%);
-  }
+ .header__hamburger.open span:nth-child(2) { opacity:0; }
 
-  .mobilemenu__list ul {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-  }
+ .header__hamburger.open span:nth-child(3) { transform:translateY(-10px) rotate(-45deg); }
 
-  .mobilemenu__list ul li {
-    margin: 15px;
-    transform: translateX(-100%);
-    transition: 500ms;
-    transition-delay: 300ms;
-    opacity: 0;
-  }
+ .subheader { height:200px; background-image:url("https://www.build-review.com/wp-content/uploads/2019/05/Construction-business.png"); margin-bottom:75px; }
 
-  .mobilemenu__list.open ul li {
-    transform: translateX(0%);
-    opacity: 1;
-  }
+ .mobilemenu { display:none; }
 
-  .header__menu {
-    display: none;
-  }
+ @media (max-width:992px) { .mobilemenu { position:fixed; z-index:2; display:flex; top:0; padding-top:90px; margin:0; height:100vh; justify-content:center; width:100vw; background-color:#eee; transform:translateY(-100%); transition:400ms; }
 
-  .header__menuicon {
-    display: flex;
-  }
+ .mobilemenu.open { transform:translateY(0%); }
 
-  .header__topbar {
-    display: none;
-  }
-}
+ .mobilemenu__list ul { display:flex; flex-direction:column; list-style:none; }
 
-.footer {
-  color: white;
-  padding: 75px;
-  background-image: url("https://www.debouwcombinatienc.nl/wp-content/uploads/2019/02/prism.png");
-  border-top: 7px solid #4b84af;
-}
+ .mobilemenu__list ul li { margin:15px; transform:translateX(-100%); transition:500ms; transition-delay:300ms; opacity:0; }
 
-.footer__menu {
-  flex-direction: column;
-  display: flex;
-}
+ .mobilemenu__list.open ul li { transform:translateX(0%); opacity:1; }
 
-.footer__menu ul {
-  list-style: none;
-}
+ .header__menu { display:none; }
 
-.footer__menu ul li {
-  padding: 2px 0;
-}
+ .header__menuicon { display:flex; }
 
-.footer__menu ul li .fas {
-  font-size: 1.35rem;
-  margin-right: 10px;
-  color: #4b84af;
-}
+ .header__topbar { display:none; }
 
-.footer__bottom {
-  height: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  background-color: #202020;
-  color: #ccc;
-  font-size: 0.6rem;
-}
+ }
 
-.footer h2 {
-  font-family: "Montserrat", "Arial", "sans-serif";
-  font-size: 18px;
-  font-weight: bold;
-}
+ .footer { color:white; padding:75px; background-image:url("https://www.debouwcombinatienc.nl/wp-content/uploads/2019/02/prism.png"); border-top:7px solid #4b84af; }
 
-.service-card {
-  background-color: red;
-}
+ .footer__menu { flex-direction:column; display:flex; }
+
+ .footer__menu ul { list-style:none; }
+
+ .footer__menu ul li { padding:2px 0; }
+
+ .footer__menu ul li .fas { font-size:1.35rem; margin-right:10px; color:#4b84af; }
+
+ .footer__bottom { height:25px; display:flex; align-items:center; justify-content:flex-end; background-color:#202020; color:#ccc; font-size:0.6rem; }
+
+ .footer h2 { font-family:"Montserrat", "Arial", "sans-serif"; font-size:18px; font-weight:bold; }
+
+ .service-card { background-color:red; }
+
