--- a/wp-content/themes/bouwbedrijf_theme_one/scss/style.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/style.scss
@@ -8,5 +8,6 @@
 @import "./header";
 @import "./footer";
 
-//Custom widgets
-@import "./widgets/card";
+@import "./advertisement";
+@import "./card";
+@import "./hero";
