--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -36,6 +36,12 @@
 
  }
 
+ @keyframes slideIn { 0% { opacity:0; transform:translateY(-10%); }
+
+ 100% { opacity:1; transform:translateY(0%); }
+
+ }
+
  .link--primary { transition:400ms; color:#4b84af; }
 
  .link--primary:hover { color:#6d9cc0; }
@@ -130,9 +136,9 @@
 
  .service-card__title { color:white; }
 
- .hero { height:100vh; background-image:url("https://images.pexels.com/photos/544966/pexels-photo-544966.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); position:relative; }
+ .hero { height:100vh; background-image:url("https://images.pexels.com/photos/544966/pexels-photo-544966.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); position:relative; margin-top:-105px; }
 
  .hero__overlay { position:absolute; top:0; left:0; width:100%; height:100%; background-color:rgba(0, 0, 0, 0.4); }
 
- .hero__box { background-color:rgba(0, 0, 0, 0.6); height:200px; width:700px; animation:fadeIn 500ms forwards; }
+ .hero__box { background-color:rgba(0, 0, 0, 0.6); height:200px; width:700px; animation:slideIn 1s forwards; }
 
