--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_animations.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_animations.scss
@@ -28,3 +28,15 @@
     transform: translateY(0%);
   }
 }
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
