--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_hero.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_hero.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   background-image: url("https://images.pexels.com/photos/544966/pexels-photo-544966.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   position: relative;
+  margin-top: -105px;
 
   &__overlay {
     position: absolute;
@@ -16,6 +17,6 @@
     background-color: rgba(0, 0, 0, 0.6);
     height: 200px;
     width: 700px;
-    animation: fadeIn 500ms forwards;
+    animation: slideIn 1s forwards;
   }
 }
