--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -82,7 +82,7 @@
 
  .header__icons .fas { font-size:1.75rem; padding:15px; color:#4b84af; }
 
- .header__hamburger { display:flex; flex-direction:column; align-items:center; justify-content:center; background-color:#4b84af; height:100%; width:70px; cursor:pointer; }
+ .header__hamburger { display:flex; flex-direction:column; align-items:center; justify-content:center; background-color:#4b84af; width:70px; cursor:pointer; }
 
  .header__hamburger span { height:4px; width:35px; margin-bottom:5px; border-radius:5px; background-color:white; transition:all 300ms cubic-bezier(0.645, 0.045, 0.355, 1); }
 
