scss colors are changing from customizer now

--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_buttons.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_buttons.scss
@@ -8,6 +8,10 @@
   justify-content: center;
   border-radius: $border-radius-button;
 
+  &--cta {
+    background-color: $cta-color;
+  }
+
   a {
     color: white;
   }
