--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -8,11 +8,13 @@
 
  }
 
- h1,h2,h3,h4 { color:#4b84af; }
+ h1,h2,h3,h4 { color:#75a582; }
 
  p,li { line-height:1.5; }
 
  .btn { padding:20px; color:white; margin:0 15px; height:40px; display:flex; align-items:center; justify-content:center; border-radius:5px; }
+
+ .btn--cta { background-color:#fcb842; }
 
  .btn a { color:white; }
 
@@ -44,13 +46,13 @@
 
  }
 
- .link--primary { transition:400ms; color:#4b84af; }
+ .link--primary { transition:400ms; color:#75a582; }
 
- .link--primary:hover { color:#6d9cc0; }
+ .link--primary:hover { color:#94b99e; }
 
  .header { position:fixed; top:0; width:100%; z-index:3; background-color:white; box-shadow:0px 0px 10px #ccc; }
 
- .header__topbar { background-color:#4b84af; padding:0% 8%; height:30px; color:white; display:flex; justify-content:flex-end; align-items:center; }
+ .header__topbar { background-color:#75a582; padding:0% 8%; height:30px; color:white; display:flex; justify-content:flex-end; align-items:center; }
 
  .header__topbar ul { justify-content:center; display:flex; align-items:center; }
 
@@ -74,15 +76,15 @@
 
  .header__menu a { color:black; transition:color 300ms ease; }
 
- .header__menu a:hover { color:#4b84af; }
+ .header__menu a:hover { color:#75a582; }
 
  .header__mobile { display:flex; flex:1; justify-content:flex-end; }
 
  .header__icons { display:flex; justify-content:center; align-items:center; }
 
- .header__icons .fas { font-size:1.75rem; padding:15px; color:#4b84af; }
+ .header__icons .fas { font-size:1.75rem; padding:15px; color:#75a582; }
 
- .header__hamburger { display:flex; flex-direction:column; align-items:center; justify-content:center; background-color:#4b84af; width:70px; cursor:pointer; }
+ .header__hamburger { display:flex; flex-direction:column; align-items:center; justify-content:center; background-color:#75a582; width:70px; cursor:pointer; }
 
  .header__hamburger span { height:4px; width:35px; margin-bottom:5px; border-radius:5px; background-color:white; transition:all 300ms cubic-bezier(0.645, 0.045, 0.355, 1); }
 
@@ -118,7 +120,7 @@
 
  }
 
- .footer { color:white; padding:20px; background-image:url("https://www.debouwcombinatienc.nl/wp-content/uploads/2019/02/prism.png"); border-top:7px solid #4b84af; }
+ .footer { color:white; padding:20px; background-image:url("https://www.debouwcombinatienc.nl/wp-content/uploads/2019/02/prism.png"); border-top:7px solid #75a582; }
 
  .footer__menu { flex-direction:column; display:flex; }
 
@@ -126,7 +128,7 @@
 
  .footer__menu ul li { padding:2px 0; }
 
- .footer__menu ul li .fas { font-size:1.35rem; margin-right:10px; color:#4b84af; }
+ .footer__menu ul li .fas { font-size:1.35rem; margin-right:10px; color:#75a582; }
 
  .footer__bottom { height:25px; display:flex; align-items:center; justify-content:flex-end; background-color:#202020; color:#ccc; font-size:0.6rem; }
 
