--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_card.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_card.scss
@@ -6,6 +6,21 @@
   background-color: white;
   cursor: pointer;
   margin: 30px;
+  border-top: 5px solid $primary-color;
+  position: relative;
+
+  &__icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: $primary-color;
+    font-size: 1.5rem;
+    box-shadow: $box-shadow-setting;
+  }
 
   &__thumb {
     width: 100%;
