removed padding elementor div

--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_base.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_base.scss
@@ -32,3 +32,10 @@ p,
 li {
   line-height: 1.5;
 }
+
+.elementor-column-gap-default
+  > .elementor-row
+  > .elementor-column
+  > .elementor-element-populated {
+  padding: 0;
+}
