--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -12,6 +12,8 @@
 
  p,li { line-height:1.5; }
 
+ .elementor-column-gap-default > .elementor-row > .elementor-column > .elementor-element-populated { padding:0; }
+
  .btn { padding:20px; margin:0 15px; height:40px; display:flex; align-items:center; justify-content:center; border-radius:5px; transition:250ms; }
 
  .btn--cta { background-color:#3be25f; }
@@ -144,7 +146,7 @@
 
  .advertisement__content { padding:1rem; background-color:#fff; color:#6d6d6d; font-size:2rem; }
 
- .service-card { box-shadow:0px 0px 10px #ccc; border-radius:5px; height:250px; transition:250ms; background-color:white; cursor:pointer; margin:30px; border-top:4px solid #26607f; position:relative; }
+ .service-card { box-shadow:0px 0px 10px #ccc; border-radius:5px; height:250px; transition:250ms; background-color:white; cursor:pointer; margin:30px; border-top:5px solid #26607f; position:relative; }
 
  .service-card__icon { position:absolute; top:10px; left:10px; background-color:white; width:50px; height:50px; border-radius:50%; color:#26607f; font-size:1.5rem; box-shadow:0px 0px 10px #ccc; }
 
