--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_card.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_card.scss
@@ -2,7 +2,7 @@
   box-shadow: $box-shadow-setting;
   border-radius: $border-radius-button;
   height: 250px;
-  transition: 250ms;
+  transition: 400ms;
   background-color: white;
   cursor: pointer;
   margin: 30px;
@@ -27,6 +27,6 @@
   }
 
   &:hover {
-    box-shadow: 0 0 10px #bbb;
+    box-shadow: 0 0 15px #aaa;
   }
 }
