--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -138,7 +138,9 @@
 
  .footer__menu ul { list-style:none; }
 
- .footer__menu ul li { padding:2px 0; }
+ .footer__menu ul li { padding:2px 0; transition:500ms; }
+
+ .footer__menu ul li:hover { color:#ebebeb; }
 
  .footer__menu ul li .fas { font-size:1.35rem; margin-right:10px; color:#26607f; }
 
@@ -152,7 +154,7 @@
 
  .advertisement__content { padding:1rem; background-color:#fff; color:#6d6d6d; font-size:2rem; }
 
- .service-card { box-shadow:0px 0px 10px #ccc; border-radius:5px; height:250px; transition:400ms; background-color:white; cursor:pointer; margin:30px; border-top:5px solid #26607f; position:relative; }
+ .service-card { box-shadow:0px 0px 10px #ccc; border-radius:5px; transition:400ms; background-color:white; cursor:pointer; margin:30px; border-top:5px solid #26607f; position:relative; }
 
  .service-card__icon { position:absolute; top:10px; left:10px; background-color:white; width:50px; height:50px; border-radius:50%; color:#26607f; font-size:1.5rem; box-shadow:0px 0px 10px #ccc; }
 
