--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -30,7 +30,15 @@
 
  .elementor-button:hover { background-color:#1a4258 !important; }
 
- .wpcf7-form-control { height:50px; border:1px solid black; }
+ .wpcf7 input[type="text"],.wpcf7 input[type="email"] { height:35px; border:1px solid #aaa; font-family:"Rubik", "Arial", "sans-serif"; font-size:14px; padding:5px; transition:400ms; border-radius:5px; }
+
+ .wpcf7 input[type="text"]:focus,.wpcf7 input[type="email"]:focus { border:1px solid #26607f; }
+
+ .wpcf7 textarea { resize:none; border-radius:5px; border:1px solid #aaa; }
+
+ .wpcf7 input[type="submit"] { background-color:#26607f; color:white; border-radius:5px; cursor:pointer; font-size:16px; transition:400ms; }
+
+ .wpcf7 input[type="submit"]:hover { background-color:#1a4258; }
 
  @keyframes fadeIn { 0% { opacity:0; }
 
@@ -166,5 +174,13 @@
 
  .hero__overlay { position:absolute; top:0; left:0; width:100%; height:100%; background-color:rgba(0, 0, 0, 0.4); }
 
- .hero__box { background-color:rgba(0, 0, 0, 0.6); height:200px; width:700px; animation:slideIn 1s forwards; }
+ .hero__box { background-color:rgba(0, 0, 0, 0.4); padding:20px; height:auto; width:800px; animation:slideIn 1s forwards; }
+
+ @media (max-width:768px) { .hero__box { width:90%; }
+
+ }
+
+ .hero__box p,.hero__box h1,.hero__box h2,.hero__box h3 { color:white; }
+
+ .hero__box h1 { font-size:36px; }
 
