--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_hero.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_hero.scss
@@ -14,9 +14,25 @@
   }
 
   &__box {
-    background-color: rgba(0, 0, 0, 0.6);
-    height: 200px;
-    width: 700px;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 20px;
+    height: auto;
+    width: 800px;
     animation: slideIn 1s forwards;
+
+    @media (max-width: 768px) {
+      width: 90%;
+    }
+
+    p,
+    h1,
+    h2,
+    h3 {
+      color: white;
+    }
+
+    h1 {
+      font-size: 36px;
+    }
   }
 }
