--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_inputs.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_inputs.scss
@@ -1,4 +1,34 @@
-.wpcf7-form-control {
-  height: 50px;
-  border: 1px solid black;
+//Changing basic contact form 7 styling here
+.wpcf7 input[type="text"],
+.wpcf7 input[type="email"] {
+  height: 35px;
+  border: 1px solid #aaa;
+  font-family: $main-text-font;
+  font-size: 14px;
+  padding: 5px;
+  transition: 400ms;
+  border-radius: $border-radius-button;
+
+  &:focus {
+    border: 1px solid $primary-color;
+  }
+}
+
+.wpcf7 textarea {
+  resize: none;
+  border-radius: $border-radius-button;
+  border: 1px solid #aaa;
+}
+
+.wpcf7 input[type="submit"] {
+  background-color: $primary-color;
+  color: white;
+  border-radius: $border-radius-button;
+  cursor: pointer;
+  font-size: 16px;
+  transition: 400ms;
+
+  &:hover {
+    background-color: darken($primary-color, 10%);
+  }
 }
