--- a/wp-content/themes/bouwbedrijf_theme_one/css/style.css
+++ b/wp-content/themes/bouwbedrijf_theme_one/css/style.css
@@ -160,13 +160,13 @@
 
  .advertisement__content { padding:1rem; background-color:#fff; color:#6d6d6d; font-size:2rem; }
 
- .service-card { box-shadow:0px 0px 10px #ccc; border-radius:5px; transition:400ms; background-color:white; cursor:pointer; margin:30px; border-top:5px solid #26607f; position:relative; }
+ .service-card { box-shadow:0px 0px 10px #ccc; border-radius:5px; transition:250ms; background-color:white; cursor:pointer; margin:30px; border-top:5px solid #26607f; position:relative; }
 
  .service-card__icon { position:absolute; top:10px; left:10px; background-color:white; width:50px; height:50px; border-radius:50%; color:#26607f; font-size:1.5rem; box-shadow:0px 0px 10px #ccc; }
 
  .service-card__thumb { width:100%; }
 
- .service-card:hover { box-shadow:0 0 15px #aaa; }
+ .service-card:hover { box-shadow:0 0 15px #aaa; transform:translateY(-2%); }
 
  .hero { height:100vh; background-image:url("https://images.pexels.com/photos/544966/pexels-photo-544966.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); position:relative; margin-top:-105px; }
 
