--- a/wp-content/themes/bouwbedrijf_theme_one/scss/_footer.scss
+++ b/wp-content/themes/bouwbedrijf_theme_one/scss/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   color: white;
   padding: 20px;
-  background-image: url("https://www.debouwcombinatienc.nl/wp-content/uploads/2019/02/prism.png");
+  background-color: #353535;
   border-top: 7px solid $primary-color;
   &__menu {
     flex-direction: column;
